test/expected/explain_ac9i.out
explain int a[const 9]
             ^
14: error: "const" arrays are illegal outside of parameters
